--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack",
     "start": "webpack-dev-server --mode development --watch --hot",
-    "build": "wepback --mode production"
+    "build": "webpack --mode production"
   },
   "author": "gluis",
   "license": "ISC",
