--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@gluis/modalmadness",
+  "name": "@gluis/modal-madness",
   "version": "1.0.0",
   "description": "javascript and html modal library",
-  "private": true,
+  "private": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack",
