--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   "author": "gluis",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
-    "extract-loader": "^3.1.0",
-    "file-loader": "^4.2.0",
-    "node-sass": "^4.12.0",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "autoprefixer": "^9.8.0",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.3",
+    "extract-loader": "^3.2.0",
+    "file-loader": "^4.3.0",
+    "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.2.0",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.8.0",
-    "write-file-webpack-plugin": "^4.5.1",
-    "autoprefixer": "^9.6.1"
+    "sass-loader": "^7.3.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {}
 }
